--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ body {
   width: 48rem;
   margin-left: -5rem;
   margin-top: -25rem;
+  pointer-events: none;
 }
 
 .purple-lens2 {
@@ -52,6 +53,7 @@ body {
   width: 55rem;
   margin-left: -8.5rem;
   margin-top: -10rem;
+  pointer-events: none;
 }
 
 .rules-lens1 {
@@ -59,6 +61,7 @@ body {
   margin-left: -6rem;
   margin-top: -25rem;
   width: 60rem;
+  pointer-events: none;
 }
 
 .rules-lens2 {
@@ -66,6 +69,7 @@ body {
   margin-left: 15rem;
   margin-top: 8rem;
   width: 60rem;
+  pointer-events: none;
 }
 
 .criteria-lens1 {
@@ -73,6 +77,7 @@ body {
   margin-left: -10rem;
   margin-top: 5rem;
   width: 60rem;
+  pointer-events: none;
 }
 
 .criteria-lens2 {
@@ -80,6 +85,7 @@ body {
   margin-left: -10rem;
   margin-top: 23rem;
   width: 60rem;
+  pointer-events: none;
 }
 
 .sponsor-lens {
@@ -87,6 +93,7 @@ body {
   margin-left: -12rem;
   margin-top: -8rem;
   width: 50rem;
+  pointer-events: none;
 }
 
 .sponsor-lens2 {
@@ -94,6 +101,7 @@ body {
   margin-left: 43rem;
   margin-top: -35rem;
   width: 60rem;
+  pointer-events: none;
 }
 
 .policy-lens {
@@ -101,6 +109,7 @@ body {
   margin-left: -20rem;
   margin-top: -25rem;
   width: 50rem;
+  pointer-events: none;
 }
 
 .contact-lens {
@@ -108,6 +117,7 @@ body {
   margin-left: -15rem;
   margin-top: -15rem;
   width: 50rem;
+  pointer-events: none;
 }
 
 .contact-lens2 {
@@ -115,6 +125,7 @@ body {
   margin-left: 43rem;
   margin-top: 17rem;
   width: 40rem;
+  pointer-events: none;
 }
 
 .register-lens2 {
@@ -483,5 +494,61 @@ body {
 @-webkit-keyframes rotation {
   to {
     transform: rotate(359deg);
+  }
+}
+
+/* MEDIA QUERY FOR RESPONSIVENESS */
+
+@media only screen and (min-width: 1440px) and (max-width: 1550px) {
+  html {
+    font-size: 16.5px;
+  }
+}
+
+@media only screen and (min-width: 1300px) and (max-width: 1440px) {
+  html {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (min-width: 1190px) and (max-width: 1300px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (min-width: 1080px) and (max-width: 1190px) {
+  html {
+    font-size: 12.8px;
+  }
+}
+
+@media only screen and (min-width: 960px) and (max-width: 1080px) {
+  html {
+    font-size: 11.5px;
+  }
+}
+
+@media only screen and (min-width: 860px) and (max-width: 960px) {
+  html {
+    font-size: 10.5px;
+  }
+}
+
+@media only screen and (min-width: 760px) and (max-width: 860px) {
+  html {
+    font-size: 9.5px;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 760px) {
+  html {
+    font-size: 8px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  html {
+    font-size: 9px;
   }
 }
