--- a/src/pages/contactPage/contact-page.css
+++ b/src/pages/contactPage/contact-page.css
@@ -5,11 +5,11 @@
 }
 
 .custom-color {
-  background: linear-gradient(90deg, #903AFF 3.08%, #FF26B9 93.85%);
-background-clip: text;
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-pointer-events: none;
+  background: linear-gradient(90deg, #903aff 3.08%, #ff26b9 93.85%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  pointer-events: none;
 }
 
 .contact-info {
@@ -48,12 +48,16 @@ pointer-events: none;
   margin-bottom: 1rem;
 }
 
+.contact-us form .input-container {
+  width: 100%;
+}
+
 .contact-us form input,
 textarea {
-    padding: 1rem 1.5rem;
-    color: #fff;
-    width: calc(100% - 3rem);
-    margin: 1rem 0;
+  padding: 1rem 1.5rem;
+  color: #fff;
+  width: calc(100% - 3rem);
+  margin: 1rem 0;
   border-radius: 0.25rem;
   border: 1px solid #fff;
   outline: none;
@@ -63,17 +67,39 @@ textarea {
 
 .contact-us form input::placeholder,
 textarea::placeholder {
-    color: #fff;
+  color: #fff;
 }
 
 .contact-us form textarea {
-    width: calc(100% - 2rem);
+  width: calc(100% - 2rem);
   height: 7.4375rem;
   padding: 1rem;
 }
 
+span.error-message {
+  font-size: 0.75rem;
+  color: var(--red);
+  display: none;
+}
+
+/* Apply styles to the error message when its corresponding input is focused and invalid */
+.contact-us form .input-container.focused input:invalid,
+.input-container.focused textarea:invalid ~ span.error-message {
+  display: block;
+}
+
+.contact-us form .input-container.focused input:invalid,
+.input-container.focused textarea:invalid {
+  border: 1px solid var(--red);
+}
+
+.contact-us form .input-container.focused input::placeholder,
+.input-container.focused textarea::placeholder {
+  color: var(--red);
+}
+
 .contact-us form .btn {
-    margin-top: 1.5rem;
-    display: flex;
-    justify-content: center;
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: center;
 }
