--- a/src/pages/registerPage/register-page.css
+++ b/src/pages/registerPage/register-page.css
@@ -1,25 +1,3 @@
-.custom-btn {
-  width: 10.75rem;
-  height: 3.3125rem;
-  border-radius: 0.25rem;
-  background: linear-gradient(
-    #903aff 0%,
-    #d434fe 56.42%,
-    #ff26b9 99.99%,
-    #fe34b9 100%
-  );
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  pointer-events: none;
-}
-
-.custom-button {
-  background: var(--violet);
-  width: 10.585rem;
-  height: 3.155rem;
-}
-
 .register {
   display: flex;
   padding: 12rem 8rem 10rem 8rem;
@@ -118,7 +96,7 @@ outline: 2px solid #fff;
 
   select {
     width: 100%; 
-  padding: 10px; 
+  padding: 1rem; 
   border: 1px solid #ccc; 
   border-radius: 5px; 
   background: transparent; 
@@ -126,6 +104,7 @@ outline: 2px solid #fff;
   color: var(--white); 
   outline: none; 
   cursor: pointer;
+  margin-bottom: 1rem;
   }
 
   select option {
@@ -143,6 +122,35 @@ outline: 2px solid #fff;
   color: var(--pink);
   font-size: 0.75rem;
   font-style: italic;
+  width: 100%;
+}
+
+span.error-message {
+  font-size: 0.75rem;
+  color: var(--red);
+  display: none;
+}
+
+/* Apply styles to the error message when its corresponding input is focused and invalid */
+.input-container.focused input:invalid ~ span.error-message {
+  display: block;
+}
+
+.input-container.focused input:invalid {
+  border: 1px solid var(--red);
+}
+
+.input-container.focused input::placeholder {
+    color: var(--red);
+}
+
+.input-container.focused select:invalid ~ span.error-message {
+  display: block;
+}
+
+.input-container.focused select:invalid {
+  border: 1px solid var(--red);
+  color: var(--red);
 }
 
 .agree {
