--- a/src/pages/contactPage/contact-page.css
+++ b/src/pages/contactPage/contact-page.css
@@ -103,3 +103,49 @@ span.error-message {
   display: flex;
   justify-content: center;
 }
+
+@media only screen and (max-width: 640px) {
+  .contact-us {
+    display: flex;
+    flex-direction: column;
+    padding: 5rem 5rem 5rem 5rem;
+    gap: 15%;
+  }
+
+  .contact-info {
+    width: 100%;
+    padding-top: 3rem;
+    margin-bottom: 5rem;
+  }
+  
+  .contact-info .heading {
+    font-family: var(--heading-font);
+    font-size: 2rem;
+    color: var(--pink);
+  }
+  
+  .contact-info .info {
+    font-size: 1.2rem;
+    margin: 1.5rem 0;
+  }
+  
+  .contact-info .socials {
+    margin-left: -0.5rem;
+  }
+  
+  .contact-us form {
+    padding: 7rem 8rem 6rem 8rem;
+    width: calc(100% - 15rem);
+    border-radius: 0.75rem;
+    background: rgba(255, 255, 255, 0.03);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  .contact-us form .heading {
+    font-family: var(--heading-font);
+    font-size: 1.25rem;
+    color: var(--pink);
+    line-height: 25px;
+    margin-bottom: 1rem;
+  }
+}
