--- a/src/pages/registerPage/register-page.css
+++ b/src/pages/registerPage/register-page.css
@@ -212,49 +212,30 @@ form .btn .button {
   }
   
   .register-img img {
-    margin-left: 0rem;
-    width: 40rem;
+    margin-left: -2rem;
+    width: 45rem;
     height: 45rem;
-    margin-bottom: 2rem;
+    margin-bottom: -4rem;
   }
   
   .register .form-container {
     margin-right: 0rem;
-    padding: 7rem 6rem 6rem 6rem;
-    width: calc(100% - 14rem);
+    padding: 7rem 1rem 6rem 1rem;
+    width: calc(100% - 2rem);
     border-radius: 0.75rem;
-    background: rgba(255, 255, 255, 0.03);
+    background: transparent;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
   
   .register .form-container .heading {
-    font-family: var(--heading-font);
-    font-size: 2rem;
-    color: var(--pink);
-    margin-bottom: 3rem;
-  }
-  
-  .register .form-container .be-part {
-    display: flex;
-    font-size: 0.875rem;
-    align-items: baseline;
-    margin-bottom: 1rem;
-  }
-  
-  .walking-emoji {
-    padding: 0 1rem;
-    margin-left: 0.5rem;
-    border-bottom: 0.0625rem dotted var(--pink);
-  }
-  
-  .walking-emoji .img {
-    width: 1.625rem;
-    height: 1.625rem;
-    /* margin: 0 .5rem; */
+    position: absolute;
+    font-size: 2.5rem;
+    margin-bottom: 4rem;
+    top: 15rem;
   }
   
   .register .form-container .subheading {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: 400;
     margin-bottom: 2rem;
   }
@@ -262,6 +243,53 @@ form .btn .button {
   .input-container {
     width: 100%;
     margin: 1rem 0;
+  }
+
+  .input-container.select1 {
+    width: 57.5%;
+    margin: 1rem 0;
+  }
+
+  .input-container.select2 {
+    width: 36.5%;
+    margin: 1rem 0;
+  }
+  
+  .form-container form {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  
+  .form-container form label {
+    font-size: 0.975rem;
+  }
+
+    select {
+    padding: 1.2rem 1rem;  
+    border-radius: 3px; 
+    font-size: 1.1rem; 
+    }
+  
+  .reminder {
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+  }
+  
+  .agree .check-box {
+    width: 1.175rem;
+    height: 1.175rem;
+  }
+  
+  .agree .check-box .checker {
+      width: 0.975rem;
+      height: 0.975rem;
+  }
+  
+  .agree span {
+      margin-left: .8rem;
+      font-size: 1.1rem;
   }
   
 }
