--- a/src/pages/contactPage/contact-page.css
+++ b/src/pages/contactPage/contact-page.css
@@ -113,39 +113,43 @@ span.error-message {
   }
 
   .contact-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     padding-top: 3rem;
     margin-bottom: 5rem;
+    text-align: center;
   }
   
   .contact-info .heading {
-    font-family: var(--heading-font);
-    font-size: 2rem;
-    color: var(--pink);
+   display: none;
   }
   
   .contact-info .info {
     font-size: 1.2rem;
     margin: 1.5rem 0;
+    display: none;
   }
-  
-  .contact-info .socials {
-    margin-left: -0.5rem;
+
+  .contact-info .social-area {
+    text-align: center;
+    position: absolute;
+    margin-top: 115rem;
   }
   
   .contact-us form {
-    padding: 7rem 8rem 6rem 8rem;
-    width: calc(100% - 15rem);
+    padding: 0rem 1rem 6rem 1rem;
+    width: calc(100% - 2rem);
     border-radius: 0.75rem;
-    background: rgba(255, 255, 255, 0.03);
+    background: transparent;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
   
   .contact-us form .heading {
-    font-family: var(--heading-font);
-    font-size: 1.25rem;
-    color: var(--pink);
-    line-height: 25px;
-    margin-bottom: 1rem;
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
   }
+
 }
