--- a/src/App.css
+++ b/src/App.css
@@ -867,26 +867,26 @@ body {
   .star35 {
     width: 1.2rem;
     height: 1.2rem;
-    margin-left: -40rem;
-    margin-top: 2rem;
+    margin-left: -20rem;
+    margin-top: -3rem;
   }
   .star36 {
     width: 1rem;
     height: 1rem;
     margin-left: 16rem;
-    margin-top: 0rem;
+    margin-top: 40rem;
   }
   .star37 {
     width: 1rem;
     height: 1rem;
-    margin-left: -2rem;
-    margin-top: 14rem;
+    margin-left: -10rem;
+    margin-top: 24rem;
   }
   .star38 {
     width: 1.2rem;
     height: 1.2rem;
-    margin-left: 30rem;
-    margin-top: 12rem;
+    left: 18rem;
+    margin-top: 0rem;
   }
   .star39 {
     width: 2rem;
