--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -100,12 +100,19 @@ small {
 }
 
 @media only screen and (max-width: 640px) {  
+
+  footer {
+    padding: 7rem 5rem 2rem 5rem;
+  }
+
   .content {
-    text-align: start;
-    display: flex;
     flex-direction: column;
     gap: 0;
-    margin-bottom: 4rem;
+  }
+
+  .content .content1 .logo-div {
+    margin-bottom: 2rem;
+    padding-left: 0rem;
   }
   
   .content1 {
@@ -116,23 +123,17 @@ small {
   .content1 .intro {
     margin-top: 0.5rem;
     margin-bottom: 4rem;
-    font-size: 1rem;
-    line-height: 1.293rem;
+    font-size: 1.1rem;
+    line-height: 1.593rem;
     width: 90%;
   }
   
   .terms {
-    font-size: 0.75rem;
+    font-size: 0.85rem;
     padding: 0.05rem 1rem;
   }
   
-  .terms.of-use {
-    border-right: 0.025rem solid var(--pink);
-    padding-left: 0;
-  }
-  
   .content2 {
-    /* border: 1px solid red; */
     width: 100%;
     margin-bottom: 5rem;
   }
@@ -144,58 +145,20 @@ small {
   
   .content2 li {
     list-style: none;
-    font-size: .9rem;
+    font-size: .95rem;
     margin: 1rem 0;
   }
   
-  .socials {
-    display: flex;
-    align-items: center;
-    margin-top: 2rem;
-  }
-  
   .follow {
-    font-size: .9rem;
-    margin-right: 0.5rem;
-    color: var(--pink);
+    font-size: .95rem;
   }
   
   .socials .img {
-    width: 1.5rem;
-    height: 1.5rem;
     margin: 0 0.5rem;
   }
   
   .content3 {
-    width: 18%;
+    margin-top: -2rem;
+    width: 40%;
   }
-  
-  .content3 .info {
-    margin: 1rem 0;
-  }
-  
-  .content3 .info .detail {
-    font-size: 0.9rem;
-    line-height: 1.18425rem;
-  }
-  
-  .content3 .info .img {
-    width: 0.75rem;
-    /* height: 0.75rem; */
-  }
-  
-  .logo {
-    font-size: 1.875rem;
-    margin: 0;
-    padding-left: 0;
-  }
-  
-  .logo-dark {
-    color: var(--pink);
-  }
-  
-  small {
-    font-size: 0.75rem;
-  }
-  
 }
