--- a/src/App.css
+++ b/src/App.css
@@ -931,3 +931,15 @@ body {
     margin-top: 8rem;
   }
 }
+
+@media only screen and (min-width: 310px) and (max-width: 380px) {
+  html {
+    font-size: 7.5px;
+  }
+}
+
+@media only screen and (max-width: 310px) {
+  html {
+    font-size: 6.5px;
+  }
+}
