--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
   font-family: var(--body-font);
   background-color: var(--violet);
   color: var(--white);
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 .desktop {
