--- a/src/pages/homePage/home-page.css
+++ b/src/pages/homePage/home-page.css
@@ -668,6 +668,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin: 2rem 0;
     }
     
     .header-title {
@@ -679,7 +680,7 @@
     
     .curvey {
       width: 12.5rem;
-      margin-right: -15rem;
+      margin-right: -22rem;
       animation: slideIn 4.5s;
     }
     
